--- a/.githubworkflows/Dockerfile
+++ b/.githubworkflows/Dockerfile
@@ -1,4 +1,11 @@
-FROM openjdk:17-jdk-slim
+# Multi-stage build
+FROM maven:3.9.6-eclipse-temurin-17 AS builder
 WORKDIR /app
 COPY . .
-CMD ["java", "-version"]
+RUN mvn clean package -DskipTests
+
+FROM eclipse-temurin:17-jdk
+WORKDIR /app
+COPY --from=builder /app/target/*.jar app.jar
+EXPOSE 8080
+ENTRYPOINT ["java", "-jar", "app.jar"]
